target/generated-sources/antlr4/br/ufscar/dc/compiladores/la/sintatico/SintaticoParser.java
// Generated from java-escape by ANTLR 4.11.1
package br.ufscar.dc.compiladores.la.sintatico;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SintaticoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DECLARE=1, ALGORITMO=2, INTEIRO=3, REAL=4, TIPO=5, VAR=6, LEIA=7, ESCREVA=8, 
		SE=9, ENTAO=10, SENAO=11, FIM_SE=12, ENQUANTO=13, FIM_ENQUANTO=14, FIM_ALGORITMO=15, 
		E=16, OU=17, LITERAL=18, NAO=19, LOGICO=20, CASO=21, FIM_CASO=22, SEJA=23, 
		PARA=24, FIM_PARA=25, FACA=26, ATE=27, REGISTRO=28, FIM_REGISTRO=29, PROCEDIMENTO=30, 
		FIM_PROCEDIMENTO=31, RETORNE=32, FUNCAO=33, FIM_FUNCAO=34, CONSTANTE=35, 
		FALSO=36, VERDADEIRO=37, NUM_INT=38, NUM_REAL=39, IDENT=40, WS=41, CADEIA=42, 
		ERRO_CADEIA=43, COMENTARIO=44, ERRO_COMENTARIO=45, MAIOR=46, MAIORIGUAL=47, 
		MENOR=48, MENORIGUAL=49, DIFERENTE=50, IGUAL=51, SOMA=52, SUBTRACAO=53, 
		MULTIPLICACAO=54, DIVICAO=55, MOD=56, DELIM=57, ABREPAR=58, FECHAPAR=59, 
		ABRECAHVE=60, FECHACHAVE=61, VIRGULA=62, ATRIBUICAO=63, ENDERECO=64, INTERVALO=65, 
		PONTO=66, PONTEIRO=67, ERRO=68;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_declaracao_variaveis = 2, 
		RULE_variavel = 3, RULE_identificador = 4, RULE_tipo = 5, RULE_tipo_basico = 6, 
		RULE_tipo_variavel = 7, RULE_valor_constante = 8, RULE_registro = 9, RULE_parametro = 10, 
		RULE_parametros = 11, RULE_declaracao_funcoes = 12, RULE_corpo = 13, RULE_cmd = 14, 
		RULE_cmdLeia = 15, RULE_cmdEscreva = 16, RULE_cmdSe = 17, RULE_cmdCaso = 18, 
		RULE_cmdPara = 19, RULE_cmdEnquanto = 20, RULE_cmdFaca = 21, RULE_cmdAtribuicao = 22, 
		RULE_cmdChamada = 23, RULE_cmdRetorne = 24, RULE_selecao = 25, RULE_item_selecao = 26, 
		RULE_constantes = 27, RULE_numero_intervalo = 28, RULE_op_unario = 29, 
		RULE_exp_aritmetica = 30, RULE_termo = 31, RULE_fator = 32, RULE_op1 = 33, 
		RULE_op2 = 34, RULE_op3 = 35, RULE_parcela = 36, RULE_parcela_unario = 37, 
		RULE_parcela_nao_unario = 38, RULE_exp_relacional = 39, RULE_op_relacional = 40, 
		RULE_expressao = 41, RULE_termo_logico = 42, RULE_fator_logico = 43, RULE_parcela_logica = 44, 
		RULE_op_logico_1 = 45, RULE_op_logico_2 = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "declaracao_variaveis", "variavel", "identificador", 
			"tipo", "tipo_basico", "tipo_variavel", "valor_constante", "registro", 
			"parametro", "parametros", "declaracao_funcoes", "corpo", "cmd", "cmdLeia", 
			"cmdEscreva", "cmdSe", "cmdCaso", "cmdPara", "cmdEnquanto", "cmdFaca", 
			"cmdAtribuicao", "cmdChamada", "cmdRetorne", "selecao", "item_selecao", 
			"constantes", "numero_intervalo", "op_unario", "exp_aritmetica", "termo", 
			"fator", "op1", "op2", "op3", "parcela", "parcela_unario", "parcela_nao_unario", 
			"exp_relacional", "op_relacional", "expressao", "termo_logico", "fator_logico", 
			"parcela_logica", "op_logico_1", "op_logico_2"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'declare'", "'algoritmo'", "'inteiro'", "'real'", "'tipo'", "'var'", 
			"'leia'", "'escreva'", "'se'", "'entao'", "'senao'", "'fim_se'", "'enquanto'", 
			"'fim_enquanto'", "'fim_algoritmo'", "'e'", "'ou'", "'literal'", "'nao'", 
			"'logico'", "'caso'", "'fim_caso'", "'seja'", "'para'", "'fim_para'", 
			"'faca'", "'ate'", "'registro'", "'fim_registro'", "'procedimento'", 
			"'fim_procedimento'", "'retorne'", "'funcao'", "'fim_funcao'", "'constante'", 
			"'falso'", "'verdadeiro'", null, null, null, null, null, null, null, 
			null, "'>'", "'>='", "'<'", "'<='", "'<>'", "'='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "':'", "'('", "')'", "'['", "']'", "','", "'<-'", "'&'", 
			"'..'", "'.'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DECLARE", "ALGORITMO", "INTEIRO", "REAL", "TIPO", "VAR", "LEIA", 
			"ESCREVA", "SE", "ENTAO", "SENAO", "FIM_SE", "ENQUANTO", "FIM_ENQUANTO", 
			"FIM_ALGORITMO", "E", "OU", "LITERAL", "NAO", "LOGICO", "CASO", "FIM_CASO", 
			"SEJA", "PARA", "FIM_PARA", "FACA", "ATE", "REGISTRO", "FIM_REGISTRO", 
			"PROCEDIMENTO", "FIM_PROCEDIMENTO", "RETORNE", "FUNCAO", "FIM_FUNCAO", 
			"CONSTANTE", "FALSO", "VERDADEIRO", "NUM_INT", "NUM_REAL", "IDENT", "WS", 
			"CADEIA", "ERRO_CADEIA", "COMENTARIO", "ERRO_COMENTARIO", "MAIOR", "MAIORIGUAL", 
			"MENOR", "MENORIGUAL", "DIFERENTE", "IGUAL", "SOMA", "SUBTRACAO", "MULTIPLICACAO", 
			"DIVICAO", "MOD", "DELIM", "ABREPAR", "FECHAPAR", "ABRECAHVE", "FECHACHAVE", 
			"VIRGULA", "ATRIBUICAO", "ENDERECO", "INTERVALO", "PONTO", "PONTEIRO", 
			"ERRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SintaticoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public TerminalNode ALGORITMO() { return getToken(SintaticoParser.ALGORITMO, 0); }
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode FIM_ALGORITMO() { return getToken(SintaticoParser.FIM_ALGORITMO, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			declaracoes();
			setState(95);
			match(ALGORITMO);
			setState(96);
			corpo();
			setState(97);
			match(FIM_ALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public List<Declaracao_variaveisContext> declaracao_variaveis() {
			return getRuleContexts(Declaracao_variaveisContext.class);
		}
		public Declaracao_variaveisContext declaracao_variaveis(int i) {
			return getRuleContext(Declaracao_variaveisContext.class,i);
		}
		public List<Declaracao_funcoesContext> declaracao_funcoes() {
			return getRuleContexts(Declaracao_funcoesContext.class);
		}
		public Declaracao_funcoesContext declaracao_funcoes(int i) {
			return getRuleContext(Declaracao_funcoesContext.class,i);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitDeclaracoes(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 44023414818L) != 0) {
				{
				setState(101);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DECLARE:
				case TIPO:
				case CONSTANTE:
					{
					setState(99);
					declaracao_variaveis();
					}
					break;
				case PROCEDIMENTO:
				case FUNCAO:
					{
					setState(100);
					declaracao_funcoes();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_variaveisContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(SintaticoParser.DECLARE, 0); }
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public TerminalNode CONSTANTE() { return getToken(SintaticoParser.CONSTANTE, 0); }
		public TerminalNode IDENT() { return getToken(SintaticoParser.IDENT, 0); }
		public TerminalNode DELIM() { return getToken(SintaticoParser.DELIM, 0); }
		public Tipo_basicoContext tipo_basico() {
			return getRuleContext(Tipo_basicoContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(SintaticoParser.IGUAL, 0); }
		public Valor_constanteContext valor_constante() {
			return getRuleContext(Valor_constanteContext.class,0);
		}
		public TerminalNode TIPO() { return getToken(SintaticoParser.TIPO, 0); }
		public RegistroContext registro() {
			return getRuleContext(RegistroContext.class,0);
		}
		public Declaracao_variaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterDeclaracao_variaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitDeclaracao_variaveis(this);
		}
	}

	public final Declaracao_variaveisContext declaracao_variaveis() throws RecognitionException {
		Declaracao_variaveisContext _localctx = new Declaracao_variaveisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao_variaveis);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECLARE:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(DECLARE);
				setState(107);
				variavel();
				}
				break;
			case CONSTANTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(CONSTANTE);
				setState(109);
				match(IDENT);
				setState(110);
				match(DELIM);
				setState(111);
				tipo_basico();
				setState(112);
				match(IGUAL);
				setState(113);
				valor_constante();
				}
				break;
			case TIPO:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				match(TIPO);
				setState(116);
				match(IDENT);
				setState(117);
				match(DELIM);
				setState(118);
				registro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariavelContext extends ParserRuleContext {
		public List<IdentificadorContext> identificador() {
			return getRuleContexts(IdentificadorContext.class);
		}
		public IdentificadorContext identificador(int i) {
			return getRuleContext(IdentificadorContext.class,i);
		}
		public TerminalNode DELIM() { return getToken(SintaticoParser.DELIM, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(SintaticoParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(SintaticoParser.VIRGULA, i);
		}
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitVariavel(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			identificador();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(122);
				match(VIRGULA);
				setState(123);
				identificador();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(DELIM);
			setState(130);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentificadorContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(SintaticoParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(SintaticoParser.IDENT, i);
		}
		public List<TerminalNode> PONTO() { return getTokens(SintaticoParser.PONTO); }
		public TerminalNode PONTO(int i) {
			return getToken(SintaticoParser.PONTO, i);
		}
		public List<TerminalNode> ABRECAHVE() { return getTokens(SintaticoParser.ABRECAHVE); }
		public TerminalNode ABRECAHVE(int i) {
			return getToken(SintaticoParser.ABRECAHVE, i);
		}
		public List<Exp_aritmeticaContext> exp_aritmetica() {
			return getRuleContexts(Exp_aritmeticaContext.class);
		}
		public Exp_aritmeticaContext exp_aritmetica(int i) {
			return getRuleContext(Exp_aritmeticaContext.class,i);
		}
		public List<TerminalNode> FECHACHAVE() { return getTokens(SintaticoParser.FECHACHAVE); }
		public TerminalNode FECHACHAVE(int i) {
			return getToken(SintaticoParser.FECHACHAVE, i);
		}
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitIdentificador(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_identificador);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(IDENT);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PONTO) {
				{
				{
				setState(133);
				match(PONTO);
				setState(134);
				match(IDENT);
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ABRECAHVE) {
				{
				{
				setState(140);
				match(ABRECAHVE);
				setState(141);
				exp_aritmetica();
				setState(142);
				match(FECHACHAVE);
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public RegistroContext registro() {
			return getRuleContext(RegistroContext.class,0);
		}
		public Tipo_variavelContext tipo_variavel() {
			return getRuleContext(Tipo_variavelContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo);
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REGISTRO:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				registro();
				}
				break;
			case INTEIRO:
			case REAL:
			case LITERAL:
			case LOGICO:
			case IDENT:
			case PONTEIRO:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				tipo_variavel();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_basicoContext extends ParserRuleContext {
		public TerminalNode LITERAL() { return getToken(SintaticoParser.LITERAL, 0); }
		public TerminalNode INTEIRO() { return getToken(SintaticoParser.INTEIRO, 0); }
		public TerminalNode REAL() { return getToken(SintaticoParser.REAL, 0); }
		public TerminalNode LOGICO() { return getToken(SintaticoParser.LOGICO, 0); }
		public Tipo_basicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_basico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterTipo_basico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitTipo_basico(this);
		}
	}

	public final Tipo_basicoContext tipo_basico() throws RecognitionException {
		Tipo_basicoContext _localctx = new Tipo_basicoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo_basico);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 1310744L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_variavelContext extends ParserRuleContext {
		public Tipo_basicoContext tipo_basico() {
			return getRuleContext(Tipo_basicoContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(SintaticoParser.IDENT, 0); }
		public TerminalNode PONTEIRO() { return getToken(SintaticoParser.PONTEIRO, 0); }
		public Tipo_variavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterTipo_variavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitTipo_variavel(this);
		}
	}

	public final Tipo_variavelContext tipo_variavel() throws RecognitionException {
		Tipo_variavelContext _localctx = new Tipo_variavelContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo_variavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PONTEIRO) {
				{
				setState(155);
				match(PONTEIRO);
				}
			}

			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEIRO:
			case REAL:
			case LITERAL:
			case LOGICO:
				{
				setState(158);
				tipo_basico();
				}
				break;
			case IDENT:
				{
				setState(159);
				match(IDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Valor_constanteContext extends ParserRuleContext {
		public TerminalNode CADEIA() { return getToken(SintaticoParser.CADEIA, 0); }
		public TerminalNode NUM_INT() { return getToken(SintaticoParser.NUM_INT, 0); }
		public TerminalNode NUM_REAL() { return getToken(SintaticoParser.NUM_REAL, 0); }
		public TerminalNode VERDADEIRO() { return getToken(SintaticoParser.VERDADEIRO, 0); }
		public TerminalNode FALSO() { return getToken(SintaticoParser.FALSO, 0); }
		public Valor_constanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).enterValor_constante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintaticoListener ) ((SintaticoListener)listener).exitValor_constante(this);
		}
	}
